--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,5 @@
   <app-root></app-root>
 </body>
 <!-- <script src="assets/js/app.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>  
 </html>
